--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: CDCs, Singapore
 url: ""
-favicon: /images/favicon-isomer.ico
+favicon: /images/cdc-icon.png
 colors:
   primary-color: "#ed1c24"
   secondary-color: "#ed1c24"
