--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@ links:
       - title: Mission And Vision
         url: /permalink
       - title: History And Milestones
-        url: /about cdc/history-and-milestone
+        url: /about-cdc/history-and-milestones
       - title: Strategic Directions
         url: /permalink
       - title: Common Flagship Programmes
