--- a/_about-cdc/collection.yml
+++ b/_about-cdc/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-cdc:
     output: true
     order:
+      - Common Flagship Programmes/Law Awareness Weeks@CDC.md
       - Common Flagship Programmes/Community Legal Clinics@CDC.md
       - Common Flagship Programmes/Community Development Council Vouchers
         Scheme.md
