--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@ links:
       - title: Strategic Directions
         url: /permalink
       - title: Common Flagship Programmes
-        url: /permalink
+        url: /about-cdc/Common-Flagship-Programmes/cdc-vouchers-scheme
       - title: Five Districts Information
         url: /permalink
       - title: Getting Help
