--- a/_who-we-are/collection.yml
+++ b/_who-we-are/collection.yml
@@ -2,5 +2,6 @@ collections:
   who-we-are:
     output: true
     order:
+      - Press Centre/.keep
       - Office of the Mayors/.keep
       - CDC Corporate Profile/.keep
