--- a/_who-we-are/collection.yml
+++ b/_who-we-are/collection.yml
@@ -2,6 +2,7 @@ collections:
   who-we-are:
     output: true
     order:
+      - Press Centre/Awards.md
       - Press Centre/Publications.md
       - Press Centre/Annual Report.md
       - Press Centre/Speeches.md
