--- a/_who-we-are/collection.yml
+++ b/_who-we-are/collection.yml
@@ -8,5 +8,6 @@ collections:
       - Press Centre/Speeches.md
       - Press Centre/Media Releases.md
       - Press Centre/.keep
+      - Office of the Mayors/Our Mayors.md
       - Office of the Mayors/.keep
       - CDC Corporate Profile/.keep
