--- a/_who-we-are/collection.yml
+++ b/_who-we-are/collection.yml
@@ -11,5 +11,6 @@ collections:
       - Office of the Mayors/Mayors' Swearing In Ceremony.md
       - Office of the Mayors/Our Mayors.md
       - Office of the Mayors/.keep
+      - CDC Corporate Profile/History and Milestones.md
       - CDC Corporate Profile/The Five Districts.md
       - CDC Corporate Profile/.keep
