--- a/_join-us/collection.yml
+++ b/_join-us/collection.yml
@@ -2,5 +2,6 @@ collections:
   join-us:
     output: true
     order:
+      - Our Volunteers.md
       - Join Us As A Volunteer.md
       - Join Us As A Corporate Partner.md
