--- a/_what-we-do/collection.yml
+++ b/_what-we-do/collection.yml
@@ -2,6 +2,7 @@ collections:
   what-we-do:
     output: true
     order:
+      - Getting Help.md
       - Getting Help/.keep
       - Gallery/.keep
       - Common Flagship Programmes/.keep
