--- a/_reach-us/collection.yml
+++ b/_reach-us/collection.yml
@@ -2,5 +2,6 @@ collections:
   reach-us:
     output: true
     order:
+      - Frequently Asked Questions.md
       - Getting to a CDC.md
       - Feedback Form.md
