--- a/_what-we-do/collection.yml
+++ b/_what-we-do/collection.yml
@@ -3,5 +3,6 @@ collections:
     output: true
     order:
       - Getting Help.md
+      - Gallery/CDC Vouchers Scheme.md
       - Gallery/.keep
       - Common Flagship Programmes/.keep
