--- a/_what-we-do/collection.yml
+++ b/_what-we-do/collection.yml
@@ -5,4 +5,5 @@ collections:
       - Getting Help.md
       - Gallery/CDC Vouchers Scheme.md
       - Gallery/.keep
+      - Common Flagship Programmes/CDC Vouchers Scheme.md
       - Common Flagship Programmes/.keep
