--- a/_reach-us/collection.yml
+++ b/_reach-us/collection.yml
@@ -2,6 +2,7 @@ collections:
   reach-us:
     output: true
     order:
+      - faq.md
       - Getting to a CDC.md
       - Feedback Form.md
       - Frequently Asked Questions.md
