--- a/_reach-us/collection.yml
+++ b/_reach-us/collection.yml
@@ -2,6 +2,6 @@ collections:
   reach-us:
     output: true
     order:
-      - faq.md
+      - Frequently Asked Questions.md
       - Getting to a CDC.md
       - Feedback Form.md
