--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,5 +6,5 @@ links:
     collection: what-we-do
   - title: JOIN US
     collection: join-us
-  - title: CONTACT US
-    collection: reach-us
+  - title: Contact Us
+    collection: contact-us
