--- a/_who-we-are/collection.yml
+++ b/_who-we-are/collection.yml
@@ -12,6 +12,6 @@ collections:
       - Press Centre/.keep
       - Press Centre/Awards.md
       - Press Centre/Publications.md
-      - Press Centre/Annual Report.md
+      - Press Centre/Annual Reports.md
       - Press Centre/Speeches.md
       - Press Centre/Media Releases.md
