--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,3 +8,5 @@ links:
     collection: join-us
   - title: Contact Us
     collection: contact-us
+  - title: Example Menu
+    collection: example-menu
