--- a/_example-menu/collection.yml
+++ b/_example-menu/collection.yml
@@ -2,4 +2,5 @@ collections:
   example-menu:
     output: true
     order:
+      - Example Sub Folder/Example 1.md
       - Example Sub Folder/.keep
