--- a/_config.yml
+++ b/_config.yml
@@ -2,13 +2,13 @@ title: CDCs, Singapore
 url: ""
 favicon: /images/cdc-icon.png
 colors:
-  primary-color: "#ed1c24"
+  primary-color: "#ad161c"
   secondary-color: "#ed1c24"
   media-colors:
     - title: media-color-one
-      color: "#49759a"
+      color: "#236398"
     - title: media-color-two
-      color: "#744d9f"
+      color: "#257cc3"
     - title: media-color-three
       color: "#00838f"
     - title: media-color-four
@@ -16,7 +16,7 @@ colors:
     - title: media-color-five
       color: "#00838f"
 resources_name: Resources
-description: ""
+description: Website of the Community Development Council
 permalink: none
 baseurl: ""
 exclude:
