--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 logo: /images/cdc-logo.png
 links:
   - title: About Us
-    collection: who-we-are
+    collection: about-us
   - title: Our Programmes
     collection: what-we-do
   - title: Engage With Us
