--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ links:
     collection: about-us
   - title: Our Programmes
     collection: what-we-do
-  - title: Engage With Us
-    collection: join-us
+  - title: Our Programmes
+    collection: our-programmes
   - title: Contact Us
     collection: contact-us
