--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 logo: /images/cdc-logo.png
 links:
-  - title: About Us
-    collection: about-us
+  - title: Engage With Us
+    collection: engage-with-us
   - title: Our Programmes
     collection: what-we-do
   - title: Our Programmes
