--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ links:
     collection: engage-with-us
   - title: Our Programmes
     collection: what-we-do
-  - title: Our Programmes
-    collection: our-programmes
+  - title: About Us
+    collection: about-us
   - title: Contact Us
     collection: contact-us
