--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ links:
   - title: Engage With Us
     collection: engage-with-us
   - title: Our Programmes
-    collection: what-we-do
+    collection: our-programmes
   - title: About Us
     collection: about-us
   - title: Contact Us
