--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 logo: /images/cdc-logo.png
 links:
-  - title: About Us
-    collection: about-us
+  - title: Engage With Uss
+    collection: engage-with-uss
   - title: Our Programmes
     collection: our-programmes
   - title: Engage With Us
