--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ links:
     collection: engage-with-uss
   - title: Our Programmes
     collection: our-programmes
-  - title: Engage With Us
-    collection: engage-with-us
+  - title: About Us
+    collection: about-us
   - title: Contact Us
     collection: contact-us
