--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 logo: /images/cdc-logo.png
 links:
-  - title: Engage With Uss
-    collection: engage-with-uss
+  - title: Engage With Us
+    collection: engage-with-us
   - title: Our Programmes
     collection: our-programmes
   - title: About Us
