--- a/_engage-with-us/collection.yml
+++ b/_engage-with-us/collection.yml
@@ -3,4 +3,4 @@ collections:
     output: true
     order:
       - Volunteer With Us.md
-      - Join Us As A Corporate Partner.md
+      - Be Our Corporate Partner.md
