--- a/_press-centre/collection.yml
+++ b/_press-centre/collection.yml
@@ -2,6 +2,7 @@ collections:
   press-centre:
     output: true
     order:
+      - Media Releases.md
       - Speeches.md
       - Annual Reports.md
       - Publications.md
