--- a/_contact-us/collection.yml
+++ b/_contact-us/collection.yml
@@ -2,6 +2,6 @@ collections:
   contact-us:
     output: true
     order:
-      - Getting to a CDC.md
+      - Getting To A CDC.md
       - Feedback Form.md
       - Frequently Asked Questions.md
