--- a/_our-programmes/collection.yml
+++ b/_our-programmes/collection.yml
@@ -2,6 +2,8 @@ collections:
   our-programmes:
     output: true
     order:
+      - Common Flagship Programmes/National Integration Council CDC Corporate
+        Social Integration Fund.md
       - Common Flagship Programmes/SkillsFuture Advice@CDC.md
       - Common Flagship Programmes/SME Centres@CDC.md
       - Common Flagship Programmes/Kong Meng San CDC COVID19 Relief Fund.md
