--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,5 +8,5 @@ links:
     collection: engage-with-us
   - title: Press Centre
     collection: press-centre
-  - title: Contact Us
+  - title: Get in Touch
     collection: contact-us
