--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-us:
     output: true
     order:
+      - The Five Districts.md
       - CDC Corporate Profile/.keep
       - CDC Corporate Profile/Mission, Vision & Strategic Direction.md
       - CDC Corporate Profile/History and Milestones.md
