--- a/_config.yml
+++ b/_config.yml
@@ -53,3 +53,7 @@ plugins:
 staging: https://pa-cdc-staging.netlify.app
 prod: https://pa-cdc-prod.netlify.app
 is_government: true
+shareicon: /images/isomer-logo.svg
+facebook-pixel: ""
+google_analytics: UA-215064264-2
+linkedin-insights: ""
