--- a/_our-programmes/collection.yml
+++ b/_our-programmes/collection.yml
@@ -16,5 +16,5 @@ collections:
       - Common Flagship Programmes/SME Centres@CDC.md
       - Common Flagship Programmes/WeCare Arts Fund@CDC.md
       - Gallery/.keep
-      - Gallery/CDC Vouchers Scheme.md
+      - Gallery/2022.md
       - Getting Help.md
