--- a/_our-programmes/collection.yml
+++ b/_our-programmes/collection.yml
@@ -15,6 +15,7 @@ collections:
       - Common Flagship Programmes/SkillsFuture Advice@CDC.md
       - Common Flagship Programmes/SME Centres@CDC.md
       - Common Flagship Programmes/WeCare Arts Fund@CDC.md
+      - Gallery/2018.md
       - Gallery/2019.md
       - Gallery/2020.md
       - Gallery/2021.md
