--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: CDCs, Singapore
-url: "https://www.cdc.gov.sg"
+url: https://www.cdc.gov.sg
 favicon: /images/cdc-icon.png
 colors:
   primary-color: "#ad161c"
