--- a/_config.yml
+++ b/_config.yml
@@ -50,8 +50,8 @@ plugins:
   - jekyll-paginate
   - jekyll-sitemap
   - jekyll-remote-theme
-staging: https://pa-cdc-staging.netlify.app
-prod: https://pa-cdc-prod.netlify.app
+staging: https://staging.dkmny55bd1h7m.amplifyapp.com/
+prod: https://master.dkmny55bd1h7m.amplifyapp.com/
 is_government: true
 shareicon: /images/isomer-logo.svg
 facebook-pixel: ""
