--- a/_our-programmes/collection.yml
+++ b/_our-programmes/collection.yml
@@ -11,7 +11,7 @@ collections:
       - Common Flagship Programmes/Maybank Family Fund@CDC.md
       - Common Flagship Programmes/National Integration Council CDC Corporate
         Social Integration Fund.md
-      - Common Flagship Programmes/SkillsFuture@CDC.md
+      - Common Flagship Programmes/SkillsFuture Festival@CDC.md
       - Common Flagship Programmes/SkillsFuture Advice@CDC.md
       - Common Flagship Programmes/SME Centres@CDC.md
       - Common Flagship Programmes/WeCare Arts Fund@CDC.md
