--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -6,5 +6,6 @@ collections:
       - CDC Corporate Profile/Mission, Vision & Strategic Direction.md
       - CDC Corporate Profile/History and Milestones.md
       - The Five Districts.md
+      - Office Of The Mayors/Current and Past Mayors.md
       - Office Of The Mayors/.keep
       - Office Of The Mayors/Our Mayors.md
