--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -8,4 +8,4 @@ collections:
       - The Five Districts.md
       - Office Of The Mayors/.keep
       - Office Of The Mayors/Our Mayors.md
-      - Office Of The Mayors/Current and Past Mayors.md
+      - Office Of The Mayors/Mayors (Over the Years).md
