--- a/_our-programmes/collection.yml
+++ b/_our-programmes/collection.yml
@@ -14,6 +14,7 @@ collections:
       - Common Flagship Programmes/SkillsFuture Advice@CDC.md
       - Common Flagship Programmes/SME Centres@CDC.md
       - Common Flagship Programmes/WeCare Arts Fund@CDC.md
+      - Gallery/2024.md
       - Gallery/2023.md
       - Gallery/.keep
       - Gallery/2022.md
