--- a/_our-programmes/collection.yml
+++ b/_our-programmes/collection.yml
@@ -2,6 +2,7 @@ collections:
   our-programmes:
     output: true
     order:
+      - Common Flagship Programmes/ArtsEverywhere@CDC.md
       - Common Flagship Programmes/Overview.md
       - Common Flagship Programmes/.keep
       - Common Flagship Programmes/CDC Vouchers Scheme.md
