{"message":"Update file: collection.yml","userId":"93","fileName":"collection.yml"}

--- a/_our-programmes/collection.yml
+++ b/_our-programmes/collection.yml
@@ -15,6 +15,7 @@ collections:
       - Common Flagship Programmes/SkillsFuture Advice@CDC.md
       - Common Flagship Programmes/SME Centres@CDC.md
       - Common Flagship Programmes/WeCare Arts Fund@CDC.md
+      - Gallery/2025.md
       - Gallery/2024.md
       - Gallery/2023.md
       - Gallery/.keep
