{"message":"Update file: _config.yml","userId":"4563","fileName":"_config.yml"}

--- a/_config.yml
+++ b/_config.yml
@@ -57,3 +57,4 @@ shareicon: /images/isomer-logo.svg
 facebook-pixel: ""
 google_analytics: UA-215064264-2
 linkedin-insights: ""
+google_analytics_ga4: DH2R702H74
