{"message":"Update file: collection.yml","userId":"4563","fileName":"collection.yml"}

--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -6,6 +6,7 @@ collections:
       - CDC Corporate Profile/Mission, Vision & Strategic Direction.md
       - CDC Corporate Profile/History and Milestones.md
       - The Five Districts.md
+      - Office Of The Mayors/Our Mayors Backup.md
       - Office Of The Mayors/.keep
       - Office Of The Mayors/Our Mayors.md
       - Office Of The Mayors/Mayors (Over the Years).md
