--- a/_our-programmes/collection.yml
+++ b/_our-programmes/collection.yml
@@ -23,5 +23,6 @@ collections:
       - Gallery/2020.md
       - Gallery/2019.md
       - Gallery/2018.md
+      - WeCare Arts Exhibition 2025/Allkin Singapore.md
       - WeCare Arts Exhibition 2025/.keep
       - Getting Help.md
