--- a/_our-programmes/collection.yml
+++ b/_our-programmes/collection.yml
@@ -23,6 +23,7 @@ collections:
       - Gallery/2020.md
       - Gallery/2019.md
       - Gallery/2018.md
+      - WeCare Arts Exhibition 2025/Jalan Besar Active Ageing Centre.md
       - WeCare Arts Exhibition 2025/.keep
       - WeCare Arts Exhibition 2025/More About the WeCare Arts Exhibition 2025.md
       - WeCare Arts Exhibition 2025/Allkin Singapore.md
