{"message":"Update file: collection.yml","userId":"49903","fileName":"collection.yml"}

--- a/_sg60-wecare-arts-exhibition/collection.yml
+++ b/_sg60-wecare-arts-exhibition/collection.yml
@@ -1,4 +1,5 @@
 collections:
   sg60-wecare-arts-exhibition:
     output: true
-    order: []
+    order:
+      - Abilities Beyond Limitations and Expectations.md
