--- a/_sg60-wecare-arts-exhibition/collection.yml
+++ b/_sg60-wecare-arts-exhibition/collection.yml
@@ -2,5 +2,6 @@ collections:
   sg60-wecare-arts-exhibition:
     output: true
     order:
+      - Allkin Singapore.md
       - Abilities Beyond Limitations and Expectations.md
       - Adventist Nursing & Rehabilitation Centre.md
