--- a/_sg60-wecare-arts-exhibition/collection.yml
+++ b/_sg60-wecare-arts-exhibition/collection.yml
@@ -2,6 +2,7 @@ collections:
   sg60-wecare-arts-exhibition:
     output: true
     order:
+      - New Life Student Care (Woodlands).md
       - New Life Student Care (Teck Whye).md
       - New Life Student Care (Jelapang).md
       - New Life Silvercare (Woodlands).md
