--- a/_sg60-wecare-arts-exhibition/collection.yml
+++ b/_sg60-wecare-arts-exhibition/collection.yml
@@ -2,6 +2,7 @@ collections:
   sg60-wecare-arts-exhibition:
     output: true
     order:
+      - St Andrew's Nursing Home.md
       - SHINE Children and Youth Services.md
       - SASCO@Compassvale and Hong Kah North.md
       - Pasir Panjang Hill Community Services.md
