--- a/_sg60-wecare-arts-exhibition/collection.yml
+++ b/_sg60-wecare-arts-exhibition/collection.yml
@@ -2,6 +2,7 @@ collections:
   sg60-wecare-arts-exhibition:
     output: true
     order:
+      - The Salvation Army William Booth Corps.md
       - Suncare SG.md
       - St Andrew's Nursing Home.md
       - SHINE Children and Youth Services.md
