{"message":"Update file: collection.yml","userId":"85003","fileName":"collection.yml"}

--- a/_sg60-wecare-arts-exhibition/collection.yml
+++ b/_sg60-wecare-arts-exhibition/collection.yml
@@ -6,7 +6,7 @@ collections:
       - Adventist Nursing & Rehabilitation Centre.md
       - Allkin Singapore.md
       - Be Kind SG.md
-      - Bethesda Care Centre.md
+      - Bethesda CARE Centre.md
       - Buddhist Compassion Relief Tzu Chi Foundation (Bukit Batok).md
       - Buddhist Compassion Relief Tzu Chi Foundation (Jurong West).md
       - Care Community Services Society.md
