{"message":"Update file: collection.yml","userId":"85003","fileName":"collection.yml"}

--- a/_sg60-wecare-arts-exhibition/collection.yml
+++ b/_sg60-wecare-arts-exhibition/collection.yml
@@ -25,7 +25,7 @@ collections:
       - New Life Student Care (Teck Whye).md
       - New Life Student Care (Woodlands).md
       - Pasir Panjang Hill Community Services.md
-      - SASCO@Compassvale and Hong Kah North.md
+      - SASCO@Compassvale & SASCO@Hong Kah North.md
       - SHINE Children and Youth Services.md
       - St Andrew's Nursing Home.md
       - Suncare SG.md
