{"message":"Update file: collection.yml","userId":"85003","fileName":"collection.yml"}

--- a/_sg60-wecare-arts-exhibition/collection.yml
+++ b/_sg60-wecare-arts-exhibition/collection.yml
@@ -3,7 +3,7 @@ collections:
     output: true
     order:
       - Abilities Beyond Limitations and Expectations.md
-      - Adventist Nursing & Rehabilitation Centre.md
+      - Adventist Nursing and Rehabilitation Centre.md
       - Allkin Singapore.md
       - Be Kind SG.md
       - Bethesda CARE Centre.md
