--- a/_sg60-wecare-arts-exhibition/collection.yml
+++ b/_sg60-wecare-arts-exhibition/collection.yml
@@ -20,7 +20,7 @@ collections:
       - MWS Charis ACE Active Ageing Centre (Geylang East).md
       - Montfort Care.md
       - Neighbour Ring Community Services.md
-      - New Life Silvercare (Woodlands).md
+      - New Life Community Services — New Life Silvercare (Woodlands).md
       - New Life Student Care (Jelapang).md
       - New Life Student Care (Teck Whye).md
       - New Life Student Care (Woodlands).md
