{"message":"Update file: collection.yml","userId":"85003","fileName":"collection.yml"}

--- a/_sg60-wecare-arts-exhibition/collection.yml
+++ b/_sg60-wecare-arts-exhibition/collection.yml
@@ -21,7 +21,7 @@ collections:
       - Montfort Care.md
       - Neighbour Ring Community Services.md
       - New Life Community Services — New Life Silvercare (Woodlands).md
-      - New Life Student Care (Jelapang).md
+      - New Life Community Services — New Life Student Care (Jelapang).md
       - New Life Student Care (Teck Whye).md
       - New Life Student Care (Woodlands).md
       - Pasir Panjang Hill Community Services.md
