--- a/_sg60-wecare-arts-exhibition/collection.yml
+++ b/_sg60-wecare-arts-exhibition/collection.yml
@@ -22,7 +22,7 @@ collections:
       - Neighbour Ring Community Services.md
       - New Life Community Services — New Life Silvercare (Woodlands).md
       - New Life Community Services — New Life Student Care (Jelapang).md
-      - New Life Student Care (Teck Whye).md
+      - New Life Community Services — New Life Student Care (Teck Whye).md
       - New Life Student Care (Woodlands).md
       - Pasir Panjang Hill Community Services.md
       - SASCO@Compassvale & SASCO@Hong Kah North.md
