{"message":"Update file: collection.yml","userId":"85003","fileName":"collection.yml"}

--- a/_sg60-wecare-arts-exhibition/collection.yml
+++ b/_sg60-wecare-arts-exhibition/collection.yml
@@ -23,7 +23,7 @@ collections:
       - New Life Community Services — New Life Silvercare (Woodlands).md
       - New Life Community Services — New Life Student Care (Jelapang).md
       - New Life Community Services — New Life Student Care (Teck Whye).md
-      - New Life Student Care (Woodlands).md
+      - New Life Community Services — New Life Student Care (Woodlands).md
       - Pasir Panjang Hill Community Services.md
       - SASCO@Compassvale & SASCO@Hong Kah North.md
       - SHINE Children and Youth Services.md
