{"message":"Update file: collection.yml","userId":"85003","fileName":"collection.yml"}

--- a/_sg60-wecare-arts-exhibition/collection.yml
+++ b/_sg60-wecare-arts-exhibition/collection.yml
@@ -31,4 +31,4 @@ collections:
       - Suncare SG.md
       - The Salvation Army William Booth Corps.md
       - TSAO Foundation.md
-      - CDAC, Yayasan MENDAKI, SINDA, EA.md
+      - CDAC, MENDAKI, SINDA, EA.md
