{"message":"Update file: collection.yml","userId":"85003","fileName":"collection.yml"}

--- a/_our-programmes/collection.yml
+++ b/_our-programmes/collection.yml
@@ -15,7 +15,7 @@ collections:
       - Common Flagship Programmes/SkillsFuture Advice @ CDC.md
       - Common Flagship Programmes/SME Centres @ CDC.md
       - Common Flagship Programmes/Walking Trails @ CDC.md
-      - Common Flagship Programmes/WeCare Arts Exhibition @ CDC.md
+      - Common Flagship Programmes/WeCare Arts Exhibition.md
       - Common Flagship Programmes/WeCare Arts Experiences @ CDC.md
       - Common Flagship Programmes/WeCare Arts Fund @ CDC.md
       - Gallery/.keep
