{"message":"Update file: collection.yml","userId":"85003","fileName":"collection.yml"}

--- a/_our-programmes/collection.yml
+++ b/_our-programmes/collection.yml
@@ -17,7 +17,7 @@ collections:
       - Common Flagship Programmes/Walking Trails @ CDC.md
       - Common Flagship Programmes/WeCare Arts Exhibition.md
       - Common Flagship Programmes/WeCare Arts Experiences.md
-      - Common Flagship Programmes/WeCare Arts Fund @ CDC.md
+      - Common Flagship Programmes/WeCare Arts Fund.md
       - Gallery/.keep
       - Gallery/2025.md
       - Gallery/2024.md
